--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@ body
     margin: 0px;
 }
 
-.container 
+.container
 {
     display: grid;
     grid-template-columns: 1fr;
@@ -44,7 +44,7 @@ body
 {
     color: #8a8a88;
     text-decoration: none;
-    transition: color 0.5s
+    transition: color 0.5s;
 }
 
 .nav-link-wrapper:hover
@@ -55,6 +55,41 @@ body
 .nav-link-wrapper a:hover
 {
     color: black;
+}
+
+.dropdown
+{
+  position: relative;
+  display: inline-block;
+}
+
+.dropdown-content
+{
+  display: none;
+  position: absolute;
+  background-color: #f1f1f1;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+}
+
+.dropdown-content a
+{
+  color: #8a8a88;
+  padding: 12px 16px;
+  text-decoration: none;
+  transition: color 0.5s;
+  display: block;
+}
+
+.dropdown-content a:hover
+{
+  background-color: #ddd;
+}
+
+.dropdown:hover .dropdown-content
+{
+  display: block;
 }
 
 .portfolio-items-wrapper
@@ -70,10 +105,10 @@ body
 
 .portfolio-img-background
 {
-    
+
 }
 
 .img-text-wrapper
 {
-    
+
 }
